--- a/index.html
+++ b/index.html
@@ -16,23 +16,43 @@
     </header>
 
     <main>
-        
+        <div class="AccountScreen">
+            <h1 style="margin-bottom: 30px;">Информация!</h1>
+            <h2>id: 1</h2>
+            <h2>Имя: Z1oR</h2>
+            <h2>Подписка: Admin</h2>
+            <h2>ТелеграмId: 2929929292</h2>
+        </div>
+
+        <div class="substrictionScreen">
+            <h1 style="margin-bottom: 30px;">Подписки</h1>
+            <h2><b>Platinum-30d</b> 499p</h2>
+            <h2><b>Gold-15d</b> 399p</h2>
+            <h2><b>Silver-10d</b> 199p</h2>
+
+            <button>Купить</button>
+        </div>
     </main>
 
 
 
     <footer>
         <div class="screen1Footer">
-            <button>
-              Подписка
+            <button id="buttonSubstriction">
+              Подписки
               </button>
-              <button>
+              <button id="buttonAccount">
                   Аккаунт
               </button>
-              <button>
+              <button id="buttonBot">
                   Бот
               </button>  
           </div>
+
+
+
+          
     </footer>
+
 </body>
 </html>
