--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p>Здесь будут отображаться ваши подписки.</p>
         </div>
     </div>
-
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
