--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Husite Client</title>
+    <script async src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
     <!-- Главное меню -->
@@ -67,7 +68,7 @@
             <p>Здесь будут отображаться ваши подписки.</p>
         </div>
     </div>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    
     <script src="index.js"></script>
 </body>
 </html>
